Getting geofences from Tile38 & displaying on map

--- a/src/tile38_viewer/appsettings.json
+++ b/src/tile38_viewer/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db"
+    "DefaultConnection": "DataSource=app.db",
+    "Tile38Connection": "localhost:9851"
   },
   "Logging": {
     "LogLevel": {
