--- a/src/tile38_viewer/tile38_viewer.csproj
+++ b/src/tile38_viewer/tile38_viewer.csproj
@@ -13,5 +13,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.2.1"/>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0"/>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0"/>
+    <PackageReference Include="StackExchange.Redis" Version="2.0.601"/>
+    <PackageReference Include="GeoJSON.Net" Version="1.1.73"/>
   </ItemGroup>
 </Project>
