--- a/src/tile38_viewer/appsettings.json
+++ b/src/tile38_viewer/appsettings.json
@@ -8,5 +8,7 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "useWebSocketsForMovementUpdates": "false",
+  "RefreshInterval": 1
 }
