Moving Tile38 subscriptions into worker - seems to address performance, and drop out issues

--- a/src/viewer/appsettings.json
+++ b/src/viewer/appsettings.json
@@ -9,6 +9,6 @@
     }
   },
   "AllowedHosts": "*",
-  "useWebSocketsForMovementUpdates": "false",
-  "RefreshInterval": 1
+  "useWebSocketsForMovementUpdates": "true",
+  "RefreshInterval": 60
 }
