--- a/src/worker/appsettings.json
+++ b/src/worker/appsettings.json
@@ -1,6 +1,7 @@
 {
     "ConnectionStrings": {
-        "Tile38Connection": "localhost:9851"
+        "Tile38Connection": "localhost:9851",
+        "HubConnection": "http://localhost:5000/movementHub"
     },
     "NLogConfigurationFilePath": "nlog.config"
 }
