--- a/src/worker/worker.csproj
+++ b/src/worker/worker.csproj
@@ -1,26 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0"/>
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0"/>
-    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.2.0"/>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="1.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
     <PackageReference Include="nlog" Version="4.6.6" />
     <PackageReference Include="nlog.extensions.logging" Version="1.5.2" />
-    <PackageReference Include="StackExchange.Redis" Version="2.0.601"/>
-    <PackageReference Include="GeoJSON.Net" Version="1.1.73"/>
+    <PackageReference Include="StackExchange.Redis" Version="2.0.601" />
+    <PackageReference Include="GeoJSON.Net" Version="1.1.73" />
   </ItemGroup>
-
   <Target Name="CopyNLogConfigNative" AfterTargets="AfterBuild" Condition="Exists('../nlog.config')">
-      <Copy SourceFiles="../nlog.config" DestinationFolder="$(OutDir)"/>
-    </Target>
-    <Target Name="CopyNLogConfigDocker" AfterTargets="AfterBuild" Condition="Exists('nlog.config')">
-      <Copy SourceFiles="nlog.config" DestinationFolder="$(OutDir)"/>
-    </Target>
-    
+    <Copy SourceFiles="../nlog.config" DestinationFolder="$(OutDir)" />
+  </Target>
+  <Target Name="CopyNLogConfigDocker" AfterTargets="AfterBuild" Condition="Exists('nlog.config')">
+    <Copy SourceFiles="nlog.config" DestinationFolder="$(OutDir)" />
+  </Target>
 </Project>
