--- a/src/worker/appsettings.json
+++ b/src/worker/appsettings.json
@@ -3,5 +3,7 @@
         "Tile38Connection": "localhost:9851",
         "HubConnection": "http://localhost:5000/movementHub"
     },
-    "NLogConfigurationFilePath": "nlog.config"
+    "NLogConfigurationFilePath": "nlog.config",
+    "ScanForNewGeoFences_ms": 60000,
+    "ScanForNewKeys_ms": 60000
 }
