--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,21 +3,28 @@ services:
   tile38:
     image: tile38/tile38
     container_name: tile38
-    environment:
     ports:
         - 9851:9851
     restart: unless-stopped
+
   tile38-viewer:
     image: leighghunt/tile38-viewer
     container_name: tile38-viewer
-    build: ./src
+    build: ./src/viewer
     env_file: ./docker-environment-list
     depends_on:
         - tile38
+    ports:
+      - 5000:80
+      - 5001:443
     restart: unless-stopped
-volumes:
-  geoevent:
-networks:
-  default:
-    external:
-      name: nat
+
+  tile38-worker:
+    image: leighghunt/tile38-worker
+    container_name: tile38-worker
+    build: ./src/worker
+    env_file: ./docker-environment-list
+    depends_on:
+        - tile38
+        - tile38-viewer
+    restart: unless-stopped
