--- a/src/worker/worker.csproj
+++ b/src/worker/worker.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <None Update="appsettings.json" CopyToOutputDirectory="PreserveNewest"/>
+    <None Update="nlog.config" CopyToOutputDirectory="PreserveNewest"/>
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="1.1.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
@@ -14,10 +18,4 @@
     <PackageReference Include="StackExchange.Redis" Version="2.0.601" />
     <PackageReference Include="GeoJSON.Net" Version="1.1.73" />
   </ItemGroup>
-  <Target Name="CopyNLogConfigNative" AfterTargets="AfterBuild" Condition="Exists('../nlog.config')">
-    <Copy SourceFiles="../nlog.config" DestinationFolder="$(OutDir)" />
-  </Target>
-  <Target Name="CopyNLogConfigDocker" AfterTargets="AfterBuild" Condition="Exists('nlog.config')">
-    <Copy SourceFiles="nlog.config" DestinationFolder="$(OutDir)" />
-  </Target>
 </Project>
