--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
     #build: ./src/viewer
 
     environment:
-      - ConnectionStrings:Tile38Connection=$${ConnectionStrings:Tile38Connection}
-      - ConnectionStrings:HubConnection=$${ConnectionStrings:HubConnection}
+      - Tile38Connection=$${ConnectionStrings:Tile38Connection}
+      - HubConnection=$${ConnectionStrings:HubConnection}
       - ScanForNewGeoFences_ms=$${ScanForNewGeoFences_ms}
       - ScanForNewKeys_ms=$${ScanForNewKeys_ms}
     env_file: ./docker-environment-list
