--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       - HubConnection=$${ConnectionStrings:HubConnection}
       - ScanForNewGeoFences_ms=$${ScanForNewGeoFences_ms}
       - ScanForNewKeys_ms=$${ScanForNewKeys_ms}
+      - RefreshInterval=$${ScanForNewKeys_ms}
+      - UseWebSocketsForMovementUpdates=$${UseWebSocketsForMovementUpdates}
     env_file: ./docker-environment-list
     depends_on:
         - tile38
@@ -30,8 +32,8 @@ services:
     container_name: tile38-worker
     #build: ./src/worker
     environment:
-      - ConnectionStrings:Tile38Connection=$${ConnectionStrings:Tile38Connection}
-      - ConnectionStrings:HubConnection=$${ConnectionStrings:HubConnection}
+      - Tile38Connection=$${ConnectionStrings:Tile38Connection}
+      - HubConnection=$${ConnectionStrings:HubConnection}
       - ScanForNewGeoFences_ms=$${ScanForNewGeoFences_ms}
       - ScanForNewKeys_ms=$${ScanForNewKeys_ms}
     env_file: ./docker-environment-list
