--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,14 @@ services:
     container_name: tile38-viewer
     #build: ./src/viewer
 
+    environment:
+      - Tile38Connection=$${ConnectionStrings:Tile38Connection}
+      - HubConnection=$${ConnectionStrings:HubConnection}
+      - ScanForNewGeoFences_ms=$${ScanForNewGeoFences_ms}
+      - ScanForNewKeys_ms=$${ScanForNewKeys_ms}
+      - RefreshInterval=$${ScanForNewKeys_ms}
+      - UseWebSocketsForMovementUpdates=$${UseWebSocketsForMovementUpdates}
+    env_file: ./docker-environment-list
     depends_on:
         - tile38
     ports:
@@ -23,12 +31,6 @@ services:
     image: leighghunt/tile38-worker
     container_name: tile38-worker
     #build: ./src/worker
-    environment:
-      - Tile38Connection=$${ConnectionStrings:Tile38Connection}
-      - HubConnection=$${ConnectionStrings:HubConnection}
-      - ScanForNewGeoFences_ms=$${ScanForNewGeoFences_ms}
-      - ScanForNewKeys_ms=$${ScanForNewKeys_ms}
-    env_file: ./docker-environment-list
     depends_on:
         - tile38
         - tile38-viewer
