--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,14 @@ services:
     image: leighghunt/tile38-worker
     container_name: tile38-worker
     #build: ./src/worker
+    environment:
+      - Tile38Connection=$${ConnectionStrings:Tile38Connection}
+      - HubConnection=$${ConnectionStrings:HubConnection}
+      - ScanForNewGeoFences_ms=$${ScanForNewGeoFences_ms}
+      - ScanForNewKeys_ms=$${ScanForNewKeys_ms}
+      - RefreshInterval=$${RefreshInterval}
+      - UseWebSocketsForMovementUpdates=$${UseWebSocketsForMovementUpdates}
+    env_file: ./docker-environment-list
     depends_on:
         - tile38
         - tile38-viewer
