--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,12 +13,12 @@ services:
     #build: ./src/viewer
 
     environment:
-      - Tile38Connection=$${ConnectionStrings:Tile38Connection}
-      - HubConnection=$${ConnectionStrings:HubConnection}
-      - ScanForNewGeoFences_ms=$${ScanForNewGeoFences_ms}
-      - ScanForNewKeys_ms=$${ScanForNewKeys_ms}
-      - RefreshInterval=$${RefreshInterval}
-      - UseWebSocketsForMovementUpdates=$${UseWebSocketsForMovementUpdates}
+      - Tile38Connection=${ConnectionStrings:Tile38Connection}
+      - HubConnection=${ConnectionStrings:HubConnection}
+      - ScanForNewGeoFences_ms=${ScanForNewGeoFences_ms}
+      - ScanForNewKeys_ms=${ScanForNewKeys_ms}
+      - RefreshInterval=${RefreshInterval}
+      - UseWebSocketsForMovementUpdates=${UseWebSocketsForMovementUpdates}
     env_file: ./docker-environment-list
     depends_on:
         - tile38
@@ -32,12 +32,12 @@ services:
     container_name: tile38-worker
     #build: ./src/worker
     environment:
-      - Tile38Connection=$${ConnectionStrings:Tile38Connection}
-      - HubConnection=$${ConnectionStrings:HubConnection}
-      - ScanForNewGeoFences_ms=$${ScanForNewGeoFences_ms}
-      - ScanForNewKeys_ms=$${ScanForNewKeys_ms}
-      - RefreshInterval=$${RefreshInterval}
-      - UseWebSocketsForMovementUpdates=$${UseWebSocketsForMovementUpdates}
+      - Tile38Connection=${ConnectionStrings:Tile38Connection}
+      - HubConnection=${ConnectionStrings:HubConnection}
+      - ScanForNewGeoFences_ms=${ScanForNewGeoFences_ms}
+      - ScanForNewKeys_ms=${ScanForNewKeys_ms}
+      - RefreshInterval=${RefreshInterval}
+      - UseWebSocketsForMovementUpdates=${UseWebSocketsForMovementUpdates}
     env_file: ./docker-environment-list
     depends_on:
         - tile38
