--- a/docker-compose.mac.yml
+++ b/docker-compose.mac.yml
@@ -11,7 +11,14 @@ services:
     image: leighghunt/tile38-viewer
     container_name: tile38-viewer
     build: ./src/viewer
-    env_file: ./docker-environment-list
+    environment:
+      - Tile38Connection=${ConnectionStrings:Tile38Connection}
+      - HubConnection=${ConnectionStrings:HubConnection}
+      - ScanForNewGeoFences_ms=${ScanForNewGeoFences_ms}
+      - ScanForNewKeys_ms=${ScanForNewKeys_ms}
+      - RefreshInterval=${RefreshInterval}
+      - UseWebSocketsForMovementUpdates=${UseWebSocketsForMovementUpdates}
+    env_file: ./docker-environment-list.env
     depends_on:
         - tile38
     ports:
@@ -23,7 +30,14 @@ services:
     image: leighghunt/tile38-worker
     container_name: tile38-worker
     build: ./src/worker
-    env_file: ./docker-environment-list
+    environment:
+      - Tile38Connection=${ConnectionStrings:Tile38Connection}
+      - HubConnection=${ConnectionStrings:HubConnection}
+      - ScanForNewGeoFences_ms=${ScanForNewGeoFences_ms}
+      - ScanForNewKeys_ms=${ScanForNewKeys_ms}
+      - RefreshInterval=${RefreshInterval}
+      - UseWebSocketsForMovementUpdates=${UseWebSocketsForMovementUpdates}
+    env_file: ./docker-environment-list.env
     depends_on:
         - tile38
         - tile38-viewer
