--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
     #build: ./src/viewer
 
     environment:
-      - Tile38Connection=${ConnectionStrings:Tile38Connection}
-      - HubConnection=${ConnectionStrings:HubConnection}
+      - ConnectionStrings:Tile38Connection=${ConnectionStrings:Tile38Connection}
+      - ConnectionStrings:HubConnection=${ConnectionStrings:HubConnection}
       - ScanForNewGeoFences_ms=${ScanForNewGeoFences_ms}
       - ScanForNewKeys_ms=${ScanForNewKeys_ms}
       - RefreshInterval=${RefreshInterval}
@@ -32,8 +32,8 @@ services:
     container_name: tile38-worker
     #build: ./src/worker
     environment:
-      - Tile38Connection=${ConnectionStrings:Tile38Connection}
-      - HubConnection=${ConnectionStrings:HubConnection}
+      - ConnectionStrings:Tile38Connection=${ConnectionStrings:Tile38Connection}
+      - ConnectionStrings:HubConnection=${ConnectionStrings:HubConnection}
       - ScanForNewGeoFences_ms=${ScanForNewGeoFences_ms}
       - ScanForNewKeys_ms=${ScanForNewKeys_ms}
       - RefreshInterval=${RefreshInterval}
